# porosdjango

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: publish.yml  test.yml
porosdjango/: __init__.py  cli.py  constants.py  exceptions.py  utils.py
porosdjango/templates/: Dockerfile.j2  db_helpers.py.j2  managers.py.j2  models.py.j2
porosdjango/templates/docker/: Dockerfile.j2  alert_rules.yml.j2  alertmanager.yml.j2  celery_beat.sh.j2  celery_conf.py.j2  celery_worker.sh.j2  dev.sh.j2  docker_compose.yml.j2  dockerignore.j2  env_example.j2  flower.sh.j2  grafana_dashboard.yml.j2  init_celery.py.j2  nginx.conf.j2  prometheus.yml.j2
porosdjango/templates/docker/grafana/: celery.json  django-app.json  infrastructure.json
src/: __init__.py  cli.py
tests/: conftest.py  test_utils.py
tests/cli/: test_builder.py  test_django_commands.py  test_docker_scaffold.py  test_integration.py  test_project_scaffold.py  test_settings_modifier.py  test_template_renderer.py
